change border to box-shadow to avoid overlapping borders being thicker

--- a/style.css
+++ b/style.css
@@ -61,5 +61,5 @@ nav li {
 
 
 .entry-for-date {
-    border: 2px solid;
+    box-shadow: 0 0 0 2px black; /* Adjust the last value for thickness */
 }
